[gd_scene load_steps=8 format=3 uid="uid://dg2b7v1iv7v8v"]

[ext_resource type="Texture2D" uid="uid://cpn418mf3xh1w" path="res://assets/graphics/pickup_health.svg" id="1_70n2t"]
[ext_resource type="Script" path="res://scenes/pickups/pickup.gd" id="1_862r2"]
[ext_resource type="AudioStream" uid="uid://bnj0a82c6k88i" path="res://assets/sfxr/pickup.sfxr" id="3_erpo6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_16du0"]
radius = 8.0
height = 32.0

[sub_resource type="Animation" id="Animation_mgn6v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_wnog8"]
resource_name = "hover"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0, -5), Vector2(0, 5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_grjqg"]
_data = {
"RESET": SubResource("Animation_mgn6v"),
"hover": SubResource("Animation_wnog8")
}

[node name="Pickup" type="RigidBody2D"]
collision_layer = 16
collision_mask = 0
can_sleep = false
script = ExtResource("1_862r2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_16du0")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_70n2t")

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_erpo6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_grjqg")
}

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="DespawnTimer" type="Timer" parent="."]

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
